[gd_scene load_steps=4 format=3 uid="uid://c8q6v0j6y5n3q"]

[ext_resource type="Script" path="res://scripts/combat/combatant.gd" id="1_2k4m3"]
[ext_resource type="Texture2D" uid="uid://c8q6v0j6y5n3q" path="res://assets/sprites/characters/default_character.png" id="2_3k4m3"]
[ext_resource type="Animation" path="res://assets/animations/combatant_idle.tres" id="3_4k4m3"]

[node name="Combatant" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_2k4m3")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3k4m3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
}

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_2")

[node name="WeaponPivot" type="Node2D" parent="."]

[node name="WeaponSprite" type="Sprite2D" parent="WeaponPivot"] 